daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/T1.hex
86781b6461796c696768742e617574682e7472616e7363726970742e763658400c6721c44695816149f013c6b6d1431a64afd3114afe59509682166fd911404c48887b1a9c6e9d1c29d04d29880197e002744019fb4e0b2068a5a7779116a5b95840bad892f665f4c2d256cc3688b1e2392693308a388fb4da7e93f4c63e04fe36895b6ee14d702e10bb6340a2ef8a9e0269f0ca51721c8c38154fe0d63e0ae457e45840cf2affd9b60ea5c59e37d185d4ffea0d9d2014ee76f23d4a5212790522ea2b853a26844092b62a96106c5ad2041c071bd6c4dd3bcb9389c57543fba5c97be203582013e29cc1b2bebdc1c0ece9b094d8a63190d028a941d000a5177e25e3873c1018584006e160e72f3d521d50d3ed069f6317dfebfd40bdc798e5eaa4b2902e0b414853e06b36fa48b966e865db0d6caec5a804a48d7963d6922f01438587a7b32db712
